--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <!-- bootstrap icon -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!--style-->
 
     <link rel="stylesheet" href="css/style.css">
@@ -100,8 +103,173 @@
 
 
         <!-- feature -->
+        <div class="row justify-content-evenly pt-3 pb-5">
+            <div class="col-md-3 text-center mt-5">
+                <h1> <i class="bi bi-file-code-fill text-primary"></i></h1>
+                <h5>Build for developers</h5>
+                <p>Landkit is built to make your life easier. Variable, build tooling, documentation, and reusable component.</p>
+            </div>
+            <div class="col-md-3 text-center mt-5">
+                <h1> <i class="bi bi-easel-fill text-danger"></i></h1>
+                <h5>Build for developers</h5>
+                <p>Landkit is built to make your life easier. Variable, build tooling, documentation, and reusable component.</p>
+            </div>
+            <div class="col-md-3 text-center mt-5">
+                <h1> <i class="bi bi-calendar-range-fill text-success"></i> </h1>
+                <h5>Build for developers</h5>
+                <p>Landkit is built to make your life easier. Variable, build tooling, documentation, and reusable component.</p>
+            </div>
+        </div>
 
 
+        <!-- line -->
+        <hr>
+
+        <!-- growth -->
+        <div class="row justify-content-evenly pt-3 pb-5">
+            <div class="col-md-5 pt-3">
+                <img src="images/growth.jpg" class="img-fluid" alt="">
+            </div>
+            <div class="col-md-5 pt-3">
+                <h5 class="mt-3">Website development</h5>
+                <div class="progress">
+                    <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 90%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+
+                <h5 class="mt-3">App development</h5>
+                <div class="progress">
+                    <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 55%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+
+                <h5 class="mt-3">Software development</h5>
+                <div class="progress">
+                    <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 85%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+
+                <h5 class="mt-3">SEO</h5>
+                <div class="progress">
+                    <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+
+                <h5 class="mt-3">Marketing</h5>
+                <div class="progress">
+                    <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+
+            </div>
+        </div>
+
+        <!-- contact -->
+        <div class="row justify-content-evenly pt-2 pb-5" style="background-color: #f1f1f1;">
+            <div class="col-md-5 mt-5">
+
+                <h3 class="mb-3">Contact Form</h3>
+
+                <form>
+                    <div class="mb-3">
+                        <label for="name" class="form-label">Full Name</label>
+                        <input type="text" class="form-control" id="name" aria-describedby="emailHelp">
+                    </div>
+                    <div class="mb-3">
+                        <label for="exampleInputEmail1" class="form-label">Email address</label>
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                    </div>
+                    <div class="mb-3">
+                        <label for="exampleFormControlTextarea1" class="form-label">Message</label>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-danger">Submit</button>
+                </form>
+            </div>
+            <div class="col-md-5 mt-5">
+                <h3 class="mb-3">Address</h3>
+                <p>1180 Kimverly Way, WILLISION PARK <br> New York - 11596<br>
+                    <i class="bi bi-telephone"></i> :773-934-3707
+                </p>
+
+
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d15552.649795100722!2d77.71086795!3d12.96145485!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1730813742788!5m2!1sen!2sin" style="width: 100%;" height="250" style="border:0;"
+                    allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </div>
+
+        <!-- faq -->
+        <div class="row justify-content-evenly pt-5 pb-5">
+
+            <div class="col-md-10">
+                <h3 class="text-center pb-4">FAQ</h3>
+                <div class="accordion accordion-flush border" id="accordionFlushExample">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="flush-headingOne">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                          Accordion Item #1
+                        </button>
+                        </h2>
+                        <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="flush-headingTwo">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                          Accordion Item #2
+                        </button>
+                        </h2>
+                        <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="flush-headingThree">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                          Accordion Item #3
+                        </button>
+                        </h2>
+                        <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling
+                                up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <!-- footer -->
+        <div class="row justify-content-evenly bg-dark text-white pt-2 pb-5">
+
+            <div class="col-md-3 pt-4">
+                <h5 class="pb-2">Frontend</h5>
+                <p>Do you want to learn more about a specific frontend technology or get advice on building something with it?</p>
+            </div>
+            <div class="col-md-3 pt-4">
+                <h5 class="pb-2">Important Links</h5>
+
+                <p>
+                    <a href="#" class="link-light text-decoration-none">Home</a> <br>
+                    <a href="#" class="link-light text-decoration-none">About Us</a><br>
+                    <a href="#" class="link-light text-decoration-none">Contact Us</a><br>
+                    <a href="#" class="link-light text-decoration-none">Our Team</a><br>
+                    <a href="#" class="link-light text-decoration-none">Our Client</a>
+                </p>
+            </div>
+            <div class="col-md-3 pt-4">
+                <h5 class="pb-2">Contact Us</h5>
+                <p>1180 Kimverly Way, WILLISION PARK <br> New York - 11596<br>
+                    <i class="bi bi-telephone"></i> :773-934-3707</p>
+            </div>
+
+        </div>
+
+        <!-- copyright -->
+        <div class="row bg-secondary text-white text-center p-2">
+            <div class="col-12">
+                <p>Copyright 1999-2024 by Frontend. All Rights Reserved.</p>
+            </div>
+        </div>
+
+        <!-- container end -->
     </div>
 
 
@@ -110,5 +278,7 @@
 
 
 </body>
+
+</html>
 
 </html>
